--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
 
         <nav>
-            <a class="home" href="index.html">Home</a>
+            <a class="home" href="https://dovahkiin6.github.io/InteractiveE">Home</a>
             <a class="filler1" href="#">Filler</a>
             <a class="filler2" href="#">Filler</a>            
         </nav>
